--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://satyam1120k.github.io/Meditrack_Frontend",
+  "homepage": "https://satyam1120k.github.io/Meditrack_Frontend/",
   "name": "react",
   "private": true,
   "version": "0.0.0",
